Fix Future timeline width and scroll on show pages on mobile devices

--- a/app/assets/stylesheets/storyhooter.css
+++ b/app/assets/stylesheets/storyhooter.css
@@ -33,6 +33,8 @@ div #story-window{
   overflow: auto;
 }
 div #story-so-far, #story-evolution{
+  max-height: 640px;
+  overflow: auto;
   /*text-align: center;*/
   /*border: solid #01BFBA 1px;*/
   /*overflow: scroll;*/
